# monolithic_pr2_planner

./: README.md  tests  todo
monolithic_pr2_planner/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
monolithic_pr2_planner/config/: full_body_base.m  full_body_base.mprim  pr2-26.mprim  pr2-28.mprim  pr2-30.mprim  pr2-32.mprim  pr2-36.mprim  pr2_base.mprim  pr2_body.yaml  pr2_both_arms.yaml  pr2_left_arm.cfg  pr2_left_arm.yaml  pr2_right_arm.cfg  pr2_right_arm.yaml
monolithic_pr2_planner/gtest/: Makefile
monolithic_pr2_planner/include/monolithic_pr2_planner/: AbstractHeuristic.h  ArmModel.h  BFS3DHeuristic.h  CollisionSpaceMgr.h  Constants.h  Environment.h  HashManager.h  Heuristic.h  HeuristicMgr.h  IKManager.h  LoggerNames.h  OccupancyGridUser.h  ParameterCatalog.h  PathPostProcessor.h  SBPLEnv.h  SearchRequest.h  TransitionData.h  Visualizer.h
monolithic_pr2_planner/include/monolithic_pr2_planner/ExperimentFramework/: ExpInterface.h  ompl_full_body_planner_node.h  randomStartGoalGenerator.h
monolithic_pr2_planner/include/monolithic_pr2_planner/Heuristics/: AbstractHeuristic.h  BFS2DHeuristic.h  BFS3DHeuristic.h  HeuristicMgr.h
monolithic_pr2_planner/include/monolithic_pr2_planner/MotionPrimitives/: AdaptiveMotionPrimitive.h  AdaptiveMotionPrimitives.h  ArmAdaptiveMotionPrimitive.h  ArmMotionPrimitive.h  ArmMotionPrimitives.h  BaseAdaptiveMotionPrimitive.h  BaseMotionPrimitive.h  BaseMotionPrimitives.h  FileParser.h  MotionPrimitive.h  MotionPrimitives.h  MotionPrimitivesMgr.h  TorsoMotionPrimitive.h
monolithic_pr2_planner/include/monolithic_pr2_planner/StateReps/: ContArmState.h  ContBaseState.h  ContObjectState.h  DiscBaseState.h  DiscObjectState.h  GoalState.h  GraphState.h  ObjectPose.h  RobotPose.h  RobotState.h
monolithic_pr2_planner/src/: AbstractHeuristic.cpp  ArmModel.cpp  BFS3DHeuristic.cpp  BaseHeuristic.cpp  CollisionSpaceMgr.cpp  ContObjectPose.cpp  Environment.cpp  HashManager.cpp  Heuristic.cpp  HeuristicMgr.cpp  OccupancyGridUser.cpp  ParameterCatalog.cpp  PathPostProcessor.cpp  SBPLEnv.cpp  SearchRequest.cpp  TransitionData.cpp  Visualizer.cpp
monolithic_pr2_planner/src/ExperimentFramework/: ExpInterface.cpp  ompl_full_body_planner_node.cpp  randomStartGoalGenerator.cpp
monolithic_pr2_planner/src/Heuristics/: AbstractHeuristic.cpp  BFS2DHeuristic.cpp  BFS3DHeuristic.cpp  HeuristicMgr.cpp
monolithic_pr2_planner/src/MotionPrimitives/: ArmAdaptiveMotionPrimitive.cpp  ArmMotionPrimitive.cpp  BaseAdaptiveMotionPrimitive.cpp  BaseMotionPrimitive.cpp  FileParser.cpp  MotionPrimitive.cpp  MotionPrimitives.cpp  MotionPrimitivesMgr.cpp  TorsoMotionPrimitive.cpp
monolithic_pr2_planner/src/StateReps/: ContArmState.cpp  ContBaseState.cpp  ContObjectState.cpp  DiscBaseState.cpp  DiscObjectState.cpp  GoalState.cpp  GraphState.cpp  RobotPose.cpp  RobotState.cpp
monolithic_pr2_planner/test/: conversions.cpp  tests.launch
monolithic_pr2_planner_node/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
monolithic_pr2_planner_node/compute_stats/: compareMethods.m  compareMethodsSBPL.m  computeMethodStats.m  computeMethodStatsSBPL.m  computeStats.m  compute_metrics.sh  mainpage.dox  manifest.xml  mha_stats.m
monolithic_pr2_planner_node/compute_stats/include/compute_stats/: computePaths.h  consistency.h
monolithic_pr2_planner_node/compute_stats/launch/: consistency.launch  sbpl_planning_both_arms.launch
monolithic_pr2_planner_node/compute_stats/src/: computePaths.cpp  consistency.cpp
monolithic_pr2_planner_node/config/: logging_levels.yaml
monolithic_pr2_planner_node/include/monolithic_pr2_planner_node/: CollisionSpaceInterface.h  EnvInterfaces.h  StatsWriter.h  node.h  ompl_collision_checker.h  ompl_pr2_planner.h
monolithic_pr2_planner_node/launch/: launch_node.launch  launch_node_debugger.launch  testExecute.launch
monolithic_pr2_planner_node/maps/: freezer.bt  freezer.pgm  freezer.yaml
monolithic_pr2_planner_node/src/: CollisionSpaceInterface.cpp  EnvInterfaces.cpp  StatsWriter.cpp  node.cpp  ompl_collision_checker.cpp  ompl_pr2_planner.cpp  publishSTLToOctomap.cpp  run_simulations.cpp  testExecute.cpp  testPlanningRequest.cpp
monolithic_pr2_planner_node/src/monolithic_pr2_planner_node/srv/: _GetMobileArmPlan.py  __init__.py
monolithic_pr2_planner_node/srv/: GetMobileArmPlan.srv
